# egui_phosphor_icons

./: Cargo.toml  LICENSE  README.md
src/: icons.rs  lib.rs
