[package]
name = "egui_phosphor_icons"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Phosphor Icons for egui - A flexible icon library with multiple font styles"
license = "MIT"
repository = "https://github.com/yourusername/egui_phosphor_icons"
keywords = ["egui", "icons", "phosphor", "gui", "ui"]
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
egui = "^0.34"

[features]
default = ["bold", "fill", "light", "thin"]
bold = []
fill = []
light = []
thin = []
