[package]
name = "egui_phosphor_icons"
version = "0.3.0"
edition = "2021"
authors = ["Peter Jones <pete@peterellisjones.com>"]
description = "Phosphor Icons for egui - A flexible icon library with multiple font styles"
license = "MIT"
repository = "https://github.com/peterellisjones/egui_phosphor_icons"
keywords = ["egui", "icons", "phosphor", "gui", "ui"]
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
egui = "^0.34"

[features]
default = ["bold", "fill", "light", "thin"]
bold = []
fill = []
light = []
thin = []
