[package]
name = "egui_phosphor_icons"
version = "0.3.1"
edition = "2021"
authors = ["Peter Jones <pete@peterellisjones.com>"]
description = "Phosphor Icons for egui - A flexible icon library with multiple font styles"
license = "MIT"
repository = "https://github.com/peterellisjones/egui_phosphor_icons"
keywords = ["egui", "icons", "phosphor", "gui", "ui"]
categories = ["gui", "graphics"]
readme = "README.md"

[dependencies]
# `default-features = false` drops egui's `default_fonts` feature (which embeds
# Hack/Ubuntu/NotoEmoji into epaint). This crate only uses egui's core types
# (FontData, FontDefinitions, FontFamily, RichText, WidgetText), none of which
# require default_fonts — so consumers that build their own font set from
# `FontDefinitions::empty()` are no longer forced to embed egui's bundled fonts
# via feature unification.
egui = { version = "^0.34", default-features = false }

[features]
default = ["bold", "fill", "light", "thin"]
bold = []
fill = []
light = []
thin = []
